fixed picsBar alignment

--- a/src/components/hotel-photos/hotelPhotos.css
+++ b/src/components/hotel-photos/hotelPhotos.css
@@ -7,6 +7,7 @@
   margin: 20px auto;
   overflow-x: auto;
   display: flex;
+  justify-content: center;
   height: 136px;
 }
 #picsBar img {
